--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dark Mode To-Do List</title>
+  <link rel="icon" type="image/png" href="depositphotos_425459756-stock-photo-to-do-list-icon-colored-removebg-preview.png" />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
